Adding data maintenance functionaility for recent players
